added assets folder styles folder and the header's HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Fist Milestone, Challenge is Accepted!</title>
 </head>
 <body>
-    
+    <header>
+        <img src="assets/Group.png" alt="a developer boy is coding with laptop">
+        <h1>"In the near future, I hope to become a Developer."</h1>
+        <p>I am learning web developing. My journey is very exciting and interesting because I have the leader "Jhankar Mahbub". So be ready for a new developer!</p>
+        <button>Contact with me</button>
+    </header>
 </body>
 </html>
