--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fist Milestone, Challenge is Accepted!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="azeret-mono-normal">
     <header>
-        <img src="assets/Group.png" alt="a developer boy is coding with laptop">
-        <h1>"In the near future, I hope to become a Developer."</h1>
-        <p>I am learning web developing. My journey is very exciting and interesting because I have the leader "Jhankar Mahbub". So be ready for a new developer!</p>
-        <button>Contact with me</button>
+        <div class="header">
+            <img src="assets/Group.png" alt="a developer boy is coding with laptop">
+            <h1>
+                <span id="wish">"In the near future, I hope to become a Developer."
+                </span>
+            </h1>
+            <p>I am learning web developing. My journey is very exciting and interesting because I have the leader "Jhankar Mahbub". So be ready for a new developer!</p>
+            <button id="btn_1">Contact with me</button>
+        </div>
     </header>
 </body>
 </html>
