added the description part HTML and CSS styles also

--- a/index.html
+++ b/index.html
@@ -21,5 +21,38 @@
             <button id="btn_1">Contact with me</button>
         </div>
     </header>
+    <main>
+        <section class="description">
+            <h2 id="title">Why Web Development??</h2>
+            <p id="sub_title">As a creative person I want a creative career path may enjoy web development. Developers can use their creativity skills to design layouts for pages that are easy and enjoyable to read. Many developers also use coding to produce unique effects for websites</p>
+            <div class="boxes">
+                <div class="descrptn_1">
+                    <div class="des_txt">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement, as new software and applications are constantly being developed to improve our lives and solve complex problems.</p>
+                        <button id="btn_2">Learn More</button>
+                    </div>
+                    <img src="assets/Layer_1.png" alt="developer with yellow T-shirt is coding">
+                </div>
+                <div class="descrptn_2">
+                    <img src="assets/Group 3.png" alt="developer with pink T-shirt is coding">
+                    <div class="des_txt2">
+                        <h3>I will help People by creating Modern Web System</h3>
+                        <p>A modern web application architecture is a software design approach that leverages cloud computing and microservices to build scalable, flexible, and efficient web applications.</p>
+                        <button id="btn_2">Learn More</button>
+                    </div>
+                </div>
+                <div class="descrptn_3">
+                    <div class="des_txt">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>Code plays a pivotal role in our daily lives, most of us just haven't realized the immense impact it has on how we live our lives yet. Knowing this, learning to code is one of the wisest choices we can make. With the ability to code, we'll have the power to change the world!</p>
+                        <button id="btn_2">Learn More</button>
+
+                    </div>
+                    <img src="assets/Group 4.png" alt="developer with orange T-shirt is coding">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
