--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
         <section class="inspiration">
             <div id="text_part">
-                <h1>My Inspiration</h1>
+                <h1 id="title_2">My Inspiration</h1>
                 <p>My inspiration is Jhankar Mahbub sir. His way of teaching and analysis of problem is very clear and pretty. I try to follow him.</p>
             </div>
             <iframe width="1140" height="614" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=tnGEsNlBfvk__znS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
