--- a/index.html
+++ b/index.html
@@ -61,6 +61,40 @@
                 <iframe width="auto" height="auto" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=tnGEsNlBfvk__znS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
+
+        <section class="target">
+            <h1>My Current Target</h1>
+            <p>To become a Web Developer, I should have an understanding of HTML, CSS, and JavaScript. It's also recommended to learn about CSS and CSS frameworks. Developing these fundamental web development skills will give me the foundation and logic for communicating with programming languages.</p>
+            <div>
+                <img src="assets/html.png" alt="logo of html">
+                <h1>HTML</h1>
+                <p>HTML is the standard markup language for Web pages.
+
+                    With HTML you can create your own Website.
+                    
+                    HTML is easy to learn - You will enjoy it!</p>
+                <a href="">Learn More</a>
+            </div>
+            <div>
+                <img src="assets/css.png" alt="logo of css">
+                <h1>CSS</h1>
+                <p>CSS is the language we use to style an HTML document.
+
+                    CSS describes how HTML elements should be displayed.
+                    </p>
+                <a href="">Learn More</a>
+            </div>
+            <div>
+                <img src="assets/js.png" alt="logo of JavaScript">
+                <h1>JavaScript</h1>
+                <p>JavaScript is the world's most popular programming language.
+
+                    JavaScript is the programming language of the Web.
+                    
+                    JavaScript is easy to learn.</p>
+                <a href="">Learn More</a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
