completed the target section with styles and links

--- a/index.html
+++ b/index.html
@@ -1,100 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fist Milestone, Challenge is Accepted!</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body class="azeret-mono-normal">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body class="azeret-mono-normal">
     <header>
-        <div class="header">
-            <img src="assets/Group.png" alt="a developer boy is coding with laptop">
-            <h1>
-                <span id="wish">"In the near future, I hope to become a Developer."
-                </span>
-            </h1>
-            <p>I am learning web developing. My journey is very exciting and interesting because I have the leader "Jhankar Mahbub". So be ready for a new developer!</p>
-            <button id="btn_1">Contact with me</button>
-        </div>
+      <div class="header">
+        <img
+          src="assets/Group.png"
+          alt="a developer boy is coding with laptop"
+        />
+        <h1>
+          <span id="wish"
+            >"In the near future, I hope to become a Developer."
+          </span>
+        </h1>
+        <p>
+          I am learning web developing. My journey is very exciting and
+          interesting because I have the leader "Jhankar Mahbub". So be ready
+          for a new developer!
+        </p>
+        <button id="btn_1">Contact with me</button>
+      </div>
     </header>
     <main>
-        <section class="description">
-            <h2 id="title">Why Web Development??</h2>
-            <p id="sub_title">As a creative person I want a creative career path may enjoy web development. Developers can use their creativity skills to design layouts for pages that are easy and enjoyable to read. Many developers also use coding to produce unique effects for websites</p>
-            <div class="boxes">
-                <div class="descrptn_1">
-                    <div class="des_txt">
-                        <h3>I will Do Coding and Change The World</h3>
-                        <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily. Coding also plays a crucial role in innovation and technological advancement, as new software and applications are constantly being developed to improve our lives and solve complex problems.</p>
-                        <button id="btn_2">Learn More</button>
-                    </div>
-                    <img src="assets/Layer_1.png" alt="developer with yellow T-shirt is coding">
-                </div>
-                <div class="descrptn_2">
-                    <img src="assets/Group 3.png" alt="developer with pink T-shirt is coding">
-                    <div class="des_txt2">
-                        <h3>I will help People by creating Modern Web System</h3>
-                        <p>A modern web application architecture is a software design approach that leverages cloud computing and microservices to build scalable, flexible, and efficient web applications.</p>
-                        <button id="btn_2">Learn More</button>
-                    </div>
-                </div>
-                <div class="descrptn_3">
-                    <div class="des_txt">
-                        <h3>I will Do Coding and Change The World</h3>
-                        <p>Code plays a pivotal role in our daily lives, most of us just haven't realized the immense impact it has on how we live our lives yet. Knowing this, learning to code is one of the wisest choices we can make. With the ability to code, we'll have the power to change the world!</p>
-                        <button id="btn_2">Learn More</button>
-
-                    </div>
-                    <img src="assets/Group 4.png" alt="developer with orange T-shirt is coding">
-                </div>
+      <section class="description">
+        <h2 id="title">Why Web Development??</h2>
+        <p id="sub_title">
+          As a creative person I want a creative career path may enjoy web
+          development. Developers can use their creativity skills to design
+          layouts for pages that are easy and enjoyable to read. Many developers
+          also use coding to produce unique effects for websites
+        </p>
+        <div class="boxes">
+          <div class="descrptn_1">
+            <div class="des_txt">
+              <h3 class="title_2">I will Do Coding and Change The World</h3>
+              <p>
+                Without coding, we wouldn't have the websites, apps, and
+                programs we rely on daily. Coding also plays a crucial role in
+                innovation and technological advancement, as new software and
+                applications are constantly being developed to improve our lives
+                and solve complex problems.
+              </p>
+              <button id="btn_2">Learn More</button>
             </div>
-        </section>
-        <section class="inspiration">
-                <h1 id="title_2">My Inspiration</h1>
-                <p>My inspiration is Jhankar Mahbub sir. His way of teaching and analysis of problem is very clear and pretty. I try to follow him.</p>
-
-            <div>
-                <iframe width="auto" height="auto" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=tnGEsNlBfvk__znS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <img
+              src="assets/Layer_1.png"
+              alt="developer with yellow T-shirt is coding"
+            />
+          </div>
+          <div class="descrptn_2">
+            <img
+              src="assets/Group 3.png"
+              alt="developer with pink T-shirt is coding"
+            />
+            <div class="des_txt2">
+              <h3 class="title_2">
+                I will help People by creating Modern Web System
+              </h3>
+              <p>
+                A modern web application architecture is a software design
+                approach that leverages cloud computing and microservices to
+                build scalable, flexible, and efficient web applications.
+              </p>
+              <button id="btn_2">Learn More</button>
             </div>
-        </section>
-
-        <section class="target">
-            <h1>My Current Target</h1>
-            <p>To become a Web Developer, I should have an understanding of HTML, CSS, and JavaScript. It's also recommended to learn about CSS and CSS frameworks. Developing these fundamental web development skills will give me the foundation and logic for communicating with programming languages.</p>
-            <div>
-                <img src="assets/html.png" alt="logo of html">
-                <h1>HTML</h1>
-                <p>HTML is the standard markup language for Web pages.
-
-                    With HTML you can create your own Website.
-                    
-                    HTML is easy to learn - You will enjoy it!</p>
-                <a href="">Learn More</a>
+          </div>
+          <div class="descrptn_3">
+            <div class="des_txt">
+              <h3 class="title_2">I will Do Coding and Change The World</h3>
+              <p>
+                Code plays a pivotal role in our daily lives, most of us just
+                haven't realized the immense impact it has on how we live our
+                lives yet. Knowing this, learning to code is one of the wisest
+                choices we can make. With the ability to code, we'll have the
+                power to change the world!
+              </p>
+              <button id="btn_2">Learn More</button>
             </div>
-            <div>
-                <img src="assets/css.png" alt="logo of css">
-                <h1>CSS</h1>
-                <p>CSS is the language we use to style an HTML document.
+            <img
+              src="assets/Group 4.png"
+              alt="developer with orange T-shirt is coding"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="inspiration">
+        <h1 id="title_2">My Inspiration</h1>
+        <p>
+          My inspiration is Jhankar Mahbub sir. His way of teaching and analysis
+          of problem is very clear and pretty. I try to follow him.
+        </p>
 
-                    CSS describes how HTML elements should be displayed.
-                    </p>
-                <a href="">Learn More</a>
-            </div>
-            <div>
-                <img src="assets/js.png" alt="logo of JavaScript">
-                <h1>JavaScript</h1>
-                <p>JavaScript is the world's most popular programming language.
+        <div>
+          <iframe
+            width="auto"
+            height="auto"
+            src="https://www.youtube.com/embed/S-gIFz-uYNw?si=tnGEsNlBfvk__znS"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
 
-                    JavaScript is the programming language of the Web.
-                    
-                    JavaScript is easy to learn.</p>
-                <a href="">Learn More</a>
-            </div>
-        </section>
+      <section class="target">
+        <h1 class="title">My Current Target</h1>
+        <p style="text-align: center">
+          To become a Web Developer, I should have an understanding of HTML,
+          CSS, and JavaScript. It's also recommended to learn about CSS and CSS
+          frameworks. Developing these fundamental web development skills will
+          give me the foundation and logic for communicating with programming
+          languages.
+        </p>
+        <div class="lang_box" style="margin-top: 0px">
+          <div class="box" style="background-color: #ff4b1e05">
+            <img src="assets/html.png" alt="logo of html" />
+            <h1 class="Title">HTML</h1>
+            <p>
+              HTML is the standard markup language for Web pages. With HTML you
+              can create your own Website. HTML is easy to learn - You will
+              enjoy it!
+            </p>
+            <a href="https://www.w3schools.com/html/">Learn More</a>
+          </div>
+          <div class="box" style="background-color: #004de805">
+            <img src="assets/css.png" alt="logo of css" />
+            <h1 class="title">CSS</h1>
+            <p>
+              CSS is the language we use to style an HTML document. CSS
+              describes how HTML elements should be displayed.
+            </p>
+            <a href="https://www.w3schools.com/css/">Learn More</a>
+          </div>
+          <div class="box" style="background-color: #ffdd0005">
+            <img src="assets/js.png" alt="logo of JavaScript" />
+            <h1 class="title">JavaScript</h1>
+            <p>
+              JavaScript is the world's most popular programming language.
+              JavaScript is the programming language of the Web. JavaScript is
+              easy to learn.
+            </p>
+            <a href="https://www.w3schools.com/js/">Learn More</a>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
