added support sectrion

--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
           </div>
         </div>
       </section>
+      <section class="support">
+        <h1>
+            I need Support
+        </h1>
+        <p>
+            Get Support. Give us a few details and we'll offer the best solution. Connect by phone, chat, email, and more.
+        </p>
+        <div id="input">
+            <div id="text">
+                <input type="text" placeholder="Suggest me any feedback for me" style="color: #0D1321;">
+            </div>
+            <div id="submit">
+                <input type="submit" style="color: #0D1321;">
+            </div>
+        </div>
+            </section>
     </main>
   </body>
 </html>
