added footer elements into a div to flex it! added links as icon and designed everything on the footer section and in the header the contact wiht me button lnked with footer! challenge has been completed!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           interesting because I have the leader "Jhankar Mahbub". So be ready
           for a new developer!
         </p>
-        <button id="btn_1">Contact with me</button>
+        <button id="btn_1"><a id="link_to_contact" href="#Contact">Contact with me</a></button>
       </div>
     </header>
     <main>
@@ -172,7 +172,16 @@
                 <input type="submit" style="color: #0D1321;">
             </div>
         </div>
-            </section>
+      </section>
     </main>
+    <footer>
+        <div id="Contact">
+        
+            <p>An Open Commitment by Md Merajul Hasan</p>
+            <ul><a href="https://web.facebook.com/jim.merajul.1" target="_blank"><li><img src="assets/facebook.png" alt="facebook-icon"></a></li>
+            <li><a href="https://github.com/Md-Merajul-Hasan" target="_blank"><img src="assets/github.png" alt="github-icon"></a></li>
+            <li><a href="https://www.linkedin.com/in/jim-merajul-85425625b/" target="_blank"><img src="assets/linkedin-icon 1.png" alt="linkedin-icon"></a></li></ul>
+        </div>
+    </footer>
   </body>
 </html>
