has been made resposive

--- a/index.html
+++ b/index.html
@@ -175,13 +175,16 @@
       </section>
     </main>
     <footer>
-        <div id="Contact">
-        
-            <p>An Open Commitment by Md Merajul Hasan</p>
-            <ul><a href="https://web.facebook.com/jim.merajul.1" target="_blank"><li><img src="assets/facebook.png" alt="facebook-icon"></a></li>
+      <div id="Contact" class="foot">
+        <div>
+          <p id="name">An Open Commitment by Md Merajul Hasan</p>
+        </div>
+        <div class="links">
+          <ul><a href="https://web.facebook.com/jim.merajul.1" target="_blank"><li><img src="assets/facebook.png" alt="facebook-icon"></a></li>
             <li><a href="https://github.com/Md-Merajul-Hasan" target="_blank"><img src="assets/github.png" alt="github-icon"></a></li>
             <li><a href="https://www.linkedin.com/in/jim-merajul-85425625b/" target="_blank"><img src="assets/linkedin-icon 1.png" alt="linkedin-icon"></a></li></ul>
         </div>
+    </div>
     </footer>
   </body>
 </html>
